Corrected layout of images; added logo in the header on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,33 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #eaeaea;
+    background-color: #ffffff;
     color: black;
 }
 
+.bg-color1 {
+    background-color: #0e5ba7 !important;
+}
 
+.bg-color2 {
+    background-color: #ffffff !important;
+}
 .fa, .far, .fas {
     font-size: 3rem;
 }
 
+/* Logo and contact */
+
+@media only screen and (min-width: 768px){
+    .font-md {
+        font-size: 2.7rem !important;
+    }
+}
+
+@media only screen and (max-width: 767px){
+    .font-sm {
+        font-size: 1rem !important;
+    }
+}
 /*Navbar*/
 
 
@@ -267,3 +286,4 @@ a.join:hover{
     width: 100%;
     height: 80vh;
 }
+
